fix .thumbs-wrap

--- a/writinging.com/css/style.css
+++ b/writinging.com/css/style.css
@@ -1053,7 +1053,6 @@ footer em {
 /* thumbs-wrap */
 .thumbs-wrap {
     position: relative;
-    margin-top: -25px;
 }
 
 .intro .gallery-thumbs {
@@ -1099,43 +1098,10 @@ footer em {
     opacity: 1;
 }
 
-@media (max-width:1840px) {
-    .thumbs-wrap {
-        margin-top: -4rem;
-    }
-}
-
-@media (max-width:1800px) {
-    .thumbs-wrap {
-        margin-top: -5rem;
-    }
-}
-
-@media (max-width:1775px) {
-    .thumbs-wrap {
-        margin-top: -6rem;
-    }
-}
-
-@media (max-width:1720px) {
-    .thumbs-wrap {
-        margin-top: -8rem;
-    }
-}
-
-@media (max-width:1600px) {
-    .thumbs-wrap {
-        margin-top: -10rem;
-    }
-}
 
 @media (max-width:1520px) {
     .intro .gallery-top {
         height: 60vh;
-    }
-
-    .thumbs-wrap {
-        margin-top: -4rem;
     }
 
     .slide-wrap .swiper-slide {
@@ -1152,10 +1118,6 @@ footer em {
 
     .intro .gallery-top {
         height: auto;
-    }
-
-    .thumbs-wrap {
-        margin-top: -30px;
     }
 }
 
